# qibi_turtlebot_obstacle_avoidance

./: ..gitignore.swp  .gitignore  CMakeLists.txt  README.md  map.pgm  map.yaml  package.xml
scripts/: turtlebot3_obstacle_avoidance.py
